--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.3.0"
+    "@iconify/vue": "^4.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3"
   }
 }
